<resources>
    <string name="app_name">TeamRM</string>


    <string-array name="hour_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>00</item>
    </string-array>

    <string-array name="Minutes_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
        <item>32</item>
        <item>33</item>
        <item>34</item>
        <item>35</item>
        <item>36</item>
        <item>37</item>
        <item>38</item>
        <item>39</item>
        <item>40</item>
        <item>41</item>
        <item>42</item>
        <item>43</item>
        <item>44</item>
        <item>45</item>
        <item>46</item>
        <item>47</item>
        <item>48</item>
        <item>49</item>
        <item>50</item>
        <item>51</item>
        <item>52</item>
        <item>53</item>
        <item>54</item>
        <item>55</item>
        <item>56</item>
        <item>57</item>
        <item>58</item>
        <item>59</item>
        <item>60</item>
    </string-array>

    <string-array name="quarter_hour">
        <item>00</item>
        <item>15</item>
        <item>30</item>
        <item>45</item>
    </string-array>

    <string-array name="nav_list">
        <item>רשימת קריאות</item>
        <item>פתיחת קריאה</item>
        <item>יומן</item>
        <item>הגדרות חברה</item>
        <item>הגדרות</item>
        <item>התנתק/החלף משתמש</item>
    </string-array>


    <string-array name="setting_title_basic">
        <item>פרטים אישיים</item>
        <item>יצירת חברה</item>
        <item>התקשרות לחברה</item>
        <item>תצורת האפליקציה</item>
        <item>צור קשר</item>
        <item>שתף</item>
        <item>אודות</item>
    </string-array>

    <string-array name="setting_title_advance">
        <item>נתוני חברה</item>
        <item>הגדרת טכנאי</item>
        <item>הגדרת מוצרים</item>
        <item>הגדרת סיווג לקריאות</item>
        <item>הגדרת אזורים</item>
        <item>הגדרת משמרות</item>
        <item>תצורת אפליקציה</item>
    </string-array>


    <string-array name="dialog_filter_list">
        <item>סינון1</item>
        <item>סינון2</item>
        <item>סינון3</item>
        <item>סינון4</item>
        <item>סינון5</item>
    </string-array>

    <string name="userEmail">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your userEmail and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset userEmail</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Get registered in Firebase now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="drawer_open">drawer_open</string>
    <string name="drawer_close">drawer_close</string>
    <string name="ticket_new">פרטי קריאה</string>

    <!--labels-->
    <string name="label_ticket_filter">סינון רשימת קריאות:</string>
    <string name="label_address">כתובת:</string>
    <string name="label_post_address">כתובת דאר:</string>
    <string name="label_region">אזור:</string>
    <string name="label_mail">כתובת דוא\"ל:</string>
    <string name="label_calendar">לוח שנה משוייך:</string>
    <string name="label_phone_number">מס\' טלפון:</string>
    <string name="label_tech_regions">אזורי שירות:</string>
    <string name="label_tech_shifts">משמרות:</string>
    <string name="label_description_short">כותרת:</string>
    <string name="label_description_long">תוכן:</string>
    <string name="label_product">מוצר:</string>
    <string name="label_category">סיווג:</string>
    <string name="label_category_a">סיווג ראשוני:</string>
    <string name="label_category_b">סיווג משני:</string>
    <string name="label_calendar_color">צבע ביומן:</string>
    <string name="label_edit_prefitem_dialog_title">עריכת רשומה</string>
    <string name="label_remove_prefitem_dialog_title">מחיקת רשומה</string>
    <string name="label_button_save">שמירה</string>
    <string name="label_button_save_enrollment_code">הוספת קוד הרשמה</string>
    <string name="label_button_remove">מחיקה</string>
    <string name="label_button_cancel">ביטול</string>
    <string name="label_button_confirm">אישור</string>
    <string name="label_category_empty_list">אין סיווגים מוגדרים</string>
    <string name="label_confirm_remove">באמת למחוק?</string>
    <string name="label_remove_text">למחוק את הרשומה?</string>
    <string name="label_add_product">הוספת מוצר</string>
    <string name="label_add_category">הוספת סיווג</string>
    <string name="label_add_enrollment_code">הוספת קוד הרשמה לטכנאי</string>
    <string name="label_add_region">הוספת אזור</string>
    <string name="label_add_workshift">הוסף משמרת</string>
    <string name="label_no_content">ל\"ת</string>
    <string name="label_description_section">תוכן הקריאה</string>
    <string name="label_no_assigned_tech">אין טכנאי מצוות</string>
    <string name="label_button_copy_from_contact">העתק פרטים מאיש קשר קיים</string>
    <string name="label_tech_name">שם הטכנאי:</string>
    <string name="label_tech_nickname">כינוי במערכת:</string>
    <string name="label_enter_google_mail_only">ניתן להשתמש בכתובת Gmail או דומיין Google Suit בלבד</string>
    <string name="label_dialog_save_user_detail">עדכון פרטי משתמש</string>
    <string name="label_save_user_address">לשמור את הכתובת הרשומה בפרטי המשתמש?</string>
    <string name="label_save_user_phone">לשמור את הטלפון הרשום בפרטי המשתמש?</string>
    <string name="label_workshift_start">מ-</string>
    <string name="label_workshift_end">עד</string>
    <string name="label_workshift_input_name">הקלד שם למשמרת</string>
    <string name="label_workshift_input_label">שם:</string>
    <string name="label_enrollment_code">קוד הרשמה לטכנאי:</string>
    <string name="label_admin">מנהל</string>
    <string name="label_tech">טכנאי</string>
    <string name="label_pending_tech">מועמד לטכנאי</string>
    <string name="label_client">לקוח</string>
    <string name="label_accept_tech_btn">אשר הרשמה</string>
    <string name="label_decline_tech_btn">דחה הרשמה</string>
    <string name="label_ticket_number">מספר קריאה %1$s</string>
    <string name="label_ticket_time_opened">פתיחה: %1$s</string>
    <string name="label_ticket_time_assigned">מועד טיפול: %1$s</string>
    <string name="label_ticket_time_closed">סגירה: %1$s</string>




    <!--/labels-->

    <string name="productlist_hint">בחר מוצר&#8230;</string>


    <string name="action_settings">Settings</string>
    <string name="single_permission_text">(Click on FAB to check Single permission.\nTo test again, change the app permission in settings or reinstall the app)</string>
    <string name="update_details_btn">עדכן פרטים</string>
    <string name="userName">שם משתמש</string>
    <string name="phoneNumber">מס\' טלפון</string>


    <string-array name="product_list">
        <item>מקרר</item>
        <item>טוסטר משולשים</item>
        <item>מכונת כביסה</item>
        <item>מייבש כביסה</item>
        <item>מקלדת אלחוטית מקפלת עם תקע גרמני אסלי בסנדרט אירופאי</item>
        <item>מקרר</item>
        <item>מקרר</item>
        <item>מקרר</item>
        <item>מקרר</item>
        <item>מקרר</item>
        <item>מקרר</item>
        <item>מקרר</item>
        <item>מקרר</item>
        <item>מקרר</item>
        <item>מקרר</item>
    </string-array>

    <string-array name="category_a_list">
        <item>תקלה</item>
        <item>התקנה</item>
        <item>תיקון במקום</item>
        <item>זריקה מהחלון</item>
        <item>תמיכה נפשית</item>
        <item>קפה ומאפה</item>
    </string-array>

    <string-array name="region_list">
        <item>צפון</item>
        <item>חיפה</item>
        <item>מרכז</item>
        <item>שפלה</item>
        <item>גוש דן</item>
        <item>דרום</item>
        <item>אילת</item>
    </string-array>

    <!--colors array for tech-->
    <string-array name="tech_colors">
        <item>#f44336</item>
        <item>#E91E63</item>
        <item>#9C27B0</item>
        <item>#673AB7</item>
        <item>#3F51B5</item>
        <item>#2196F3</item>
        <item>#009688</item>
        <item>#4CAF50</item>
        <item>#FF9800</item>
        <item>#FF5722</item>
    </string-array>

</resources>
